examples/type_system/failing/49_top_level_effect_with_existing_main.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/49_top_level_effect_with_existing_main.flx
// error[E413]: Top-Level Effect
//
// Effectful operation is not allowed at top level (requires: Console).
//
//   examples/type_system/failing/49_top_level_effect_with_existing_main.flx:23:1
//    |
// 23 | print("top-level")
//    | ^^^^^^^^^^^^^^^^^^
//    | ------------------ top-level effectful expression
//
// Hint:
//   Move this code into `fn main() with ... { ... }`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E413

// E413: effectful top-level code is rejected even when main exists.

print("top-level")

fn main() with IO {
    print("inside-main")
}
